<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:padding="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/et_name"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/fab_add_keyboard_hint_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:inputType="number"
        android:layout_marginTop="10dp"
        android:id="@+id/et_phone_number"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/fab_add_keyboard_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_marginTop="10dp"
        android:text="@string/fab_add_keyboard_button"
        android:layout_gravity="center"
        android:id="@+id/bt_add_from_keyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>