<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_activity"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_gravity="top"
        android:layout_marginBottom="?attr/actionBarSize"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <RelativeLayout
        android:id="@+id/banner_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:ads="http://schemas.android.com/apk/res-auto">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>

    </RelativeLayout>

        <FrameLayout
            android:id="@+id/fragmnet_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/colorPrimaryDark"
        android:clickable="false"
        app:elevation="1dp"
        app:fabAlignmentMode="center">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            app:elevation="0dp"
            app:itemIconTint="@color/textColor"
            app:itemTextColor="@color/textColor"
            app:menu="@menu/bottom_navigation" />


    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorSecondary"
        android:src="@drawable/add_icon"
        app:layout_anchor="@id/bottom_app_bar">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_add_keyboard"
        app:layout_anchor="@+id/fab"
        android:backgroundTint="@color/colorSecondaryLight"
        android:text="@string/fab_add_keyboard"
        android:layout_marginBottom="90dp"
        app:layout_anchorGravity="top|center"
        android:textSize="10sp"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_add_contact"
        app:layout_anchor="@+id/fab"
        android:backgroundTint="@color/color_add_contact"
        android:text="@string/fab_add_contact"
        android:layout_marginBottom="150dp"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_anchorGravity="top|center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_add_call_history"
        app:layout_anchor="@+id/fab"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/fab_add_all_history"
        android:layout_marginBottom="210dp"
        app:layout_anchorGravity="top|center"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:textSize="10sp"

        android:layout_height="wrap_content"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>